--- a/pet-guide-detailハンガー種類.html
+++ b/pet-guide-detailハンガー種類.html
@@ -209,10 +209,10 @@
                     <div id="hangerCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="img/62631ef003070ac272fa730188b49dd9_w (1).jpeg" alt="MAWA">
+                                <img src="img/62631ef003070ac272fa730188b49dd9_w (1).jpeg" alt="hangar１">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/mawahanger-silhouette1.jpg" alt="MAWA Real">
+                                <img src="img/mawahanger-silhouette1.jpg" alt="hangar２">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#hangerCarousel" data-bs-slide="prev">
