--- a/pet-guide-detailハンガー種類.html
+++ b/pet-guide-detailハンガー種類.html
@@ -234,7 +234,7 @@
                 </div>
                 <div class="col-md-5 ps-md-5 mt-4 mt-md-0">
                     <span class="badge bg-success mb-2">ドイツ製</span>
-                    <h1 class="display-5 fw-bold mb-3" style="color: var(--brown-color);">シルエット 41</h1>
+                    <h1 class="display-5 fw-bold mb-3" style="color: var(--brown-color);">マワハンガー シルエット</h1>
                     <p class="text-muted mb-4">ブラウスやシャツの肩を美しく保つ、滑らないハンガーの代名詞。</p>
                     <div class="mb-4">
                         <span class="h3 fw-bold">¥1,200</span> <span class="text-muted">〜 (5本セット)</span>
