--- a/pet-guide-detailハンガー種類.html
+++ b/pet-guide-detailハンガー種類.html
@@ -209,6 +209,14 @@
         </div>
     </nav>
 
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">ホーム</a></li>
+            <li class="breadcrumb-item"><a href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
+            <li class="breadcrumb-item active">ハンズオリジナル 木製ハンガー バータイプ</li>
+        </ol>
+    </nav>
+
     <div class="container">
         <div class="hero-section">
             <div class="row align-items-center">
